# mainichikatarenshu

./: .gitignore  Cargo.toml  DEVELOPMENT_JOURNEY.md  LICENSE  README.md  build.rs  diagram.json  linker.lf  partitions.csv  renovate.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust-ci.yaml  rust-ci.yml
kukkuu/: CMakeLists.txt  sdkconfig
kukkuu/main/: CMakeLists.txt
scripts/: flash.sh
src/: app.rs  display_tests.rs  kata_display.rs  lib.rs  main.rs  wifi.rs
src/input/: mod.rs  types.rs
src/ssd1680/: cmd.rs  color.rs  display_utils.rs  driver.rs  flag.rs  graphics.rs  interface.rs  mod.rs  pins.rs  text.rs
tests/: unit_tests.rs
