[package]
name = "mainichikatarenshu"
description = "E-ink display showing a kata for each day, along with current electricity price"
version = "0.1.0"
authors = ["Juga Paazmaya <paazmaya@yahoo.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-alloc = { version = "0.5.0" }
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = [ "esp32s3" ] }
esp-println = { version = "0.12.0", features = ["esp32s3"] }


embedded-graphics = "0.8"
embedded-hal = "1.0.0"
bit_field = "0.10.2"


epd-waveshare = "0.6.0"

[dev-dependencies]
embedded-hal-mock = { version = "=0.11.1", default-features = false, features = [
    "eh1",
] }

[profile.dev]
# https://doc.rust-lang.org/rustc/codegen-options/index.html#split-debuginfo
split-debuginfo = "off"
lto = "off"
debug = "full"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = "limited"
incremental = false
lto = 'fat'
opt-level = 's'
