[package]
name = "mainichikatarenshu"
description = "E-ink display showing a kata for each day, along with current electricity price"
version = "0.1.0"
authors = ["Juga Paazmaya <paazmaya@yahoo.com>"]
edition = "2021"
license = "MIT"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mainichikatarenshu"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4.25"
anyhow = "1.0.95"

# https://github.com/esp-rs/esp-idf-svc
esp-idf-svc = { version = "0.50.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# https://github.com/embedded-graphics/embedded-graphics
embedded-graphics = "0.8.1"

# https://github.com/rust-embedded/embedded-hal
embedded-hal = "1.0.0"

# https://github.com/mbv/ssd1680
# From there:
display-interface = "0.5.0"

# Try it one more time...
# https://github.com/caemor/epd-waveshare
epd-waveshare = "0.6.0"

[build-dependencies]
embuild = "0.33"

[profile.dev]
# https://doc.rust-lang.org/rustc/codegen-options/index.html#split-debuginfo
split-debuginfo = "off"
lto = "off"
debug = "full"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = "limited"
incremental = false
lto = 'fat'
opt-level = 's'
